--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>USOFT - Qr Menu Uygulamaları</title>
+  <title>USOFT - DIGITAL MENU</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -85,7 +85,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-up" data-aos-delay="200">
-          <h1>İşletmenize Uygun QR Menu Uygulamaları</h1>
+          <h1>İşletmenize Uygun Dijital/QR Menu Uygulamaları</h1>
           <h2>Hotel, Restaurant, Cafe, Bar, Catering ve Daha Fazlası ...</h2>
           <div class="d-flex justify-content-center justify-content-lg-start">
             <a href="#about" class="btn-get-started scrollto">Demo İsteyin</a>
@@ -534,15 +534,16 @@
 
         <div class="section-title">
           <h2>FIYATLANDIRMA</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Sınırsız Qr kod ile sınırsız masa sayısı siparişleri alımı ile markanızı büyütün. Uygun fiyatlandırma, Komisyon yok. Durmadan! Büyüdükçe yükseltin. <br>
+            Dijitalleşmek için ihtiyacınız olan her şey...</p>
         </div>
 
         <div class="row">
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
-              <h3>Free Plan</h3>
-              <h4><sup>$</sup>0<span>per month</span></h4>
+              <h3>Dijital Menü</h3>
+              <h4>500<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
                 <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
                 <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
@@ -550,14 +551,14 @@
                 <li class="na"><i class="bx bx-x"></i> <span>Pharetra massa massa ultricies</span></li>
                 <li class="na"><i class="bx bx-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
               </ul>
-              <a href="#" class="buy-btn">Get Started</a>
+              <!-- <a href="#" class="buy-btn">Get Started</a> -->
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
-              <h3>Business Plan</h3>
-              <h4><sup>$</sup>29<span>per month</span></h4>
+              <h3>Dijital Menü, Admin Paneli</h3>
+              <h4>1500<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
                 <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
                 <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
@@ -565,14 +566,14 @@
                 <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
                 <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
               </ul>
-              <a href="#" class="buy-btn">Get Started</a>
+              <!-- <a href="#" class="buy-btn">Get Started</a> -->
             </div>
           </div>
 
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
-              <h3>Developer Plan</h3>
-              <h4><sup>$</sup>49<span>per month</span></h4>
+              <h3>Dijital Menü, Admin Paneli ve Masaüstü QR Tasarımı</h3>
+              <h4>2000<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
                 <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
                 <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
@@ -580,7 +581,7 @@
                 <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
                 <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
               </ul>
-              <a href="#" class="buy-btn">Get Started</a>
+              <!-- <a href="#" class="buy-btn">Get Started</a> -->
             </div>
           </div>
 
