--- a/index.html
+++ b/index.html
@@ -545,11 +545,9 @@
               <h3>Dijital Menü</h3>
               <h4>500<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
+                <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
+                <li><i class="bx bx-check"></i></li>
                 <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li class="na"><i class="bx bx-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                <li class="na"><i class="bx bx-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
               </ul>
               <!-- <a href="#" class="buy-btn">Get Started</a> -->
             </div>
@@ -560,7 +558,8 @@
               <h3>Dijital Menü, Admin Paneli</h3>
               <h4>1500<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
+                <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
+                <li><i class="bx bx-check"></i>Menünüzü Herhangi Bir Cihazda Düzenleme ve Yönetme.</li>
                 <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
                 <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
                 <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
