--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Anasayfa</a></li>
           <li><a class="nav-link scrollto" href="#about">Hakkımızda</a></li>
-          <li><a class="nav-link scrollto" href="#services">Ürünlerimiz</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Ürünlerimiz</a></li>
           <!-- <li><a class="nav-link   scrollto" href="#portfolio">Portfolio</a></li> -->
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -546,10 +546,11 @@
               <h4>500<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
-                <li><i class="bx bx-check"></i></li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
+                <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
+                <li><i class="bx bx-check"></i> Tüm akıllı telefonlarda çalışır</li>
+                <li><i class="bx bx-check"></i> Sınırsız erişim</li>
               </ul>
-              <!-- <a href="#" class="buy-btn">Get Started</a> -->
+
             </div>
           </div>
 
@@ -559,13 +560,15 @@
               <h4>1500<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
-                <li><i class="bx bx-check"></i>Menünüzü Herhangi Bir Cihazda Düzenleme ve Yönetme.</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-                <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+                <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
+                <li><i class="bx bx-check"></i>Tüm akıllı telefonlarda çalışır</li>
+                <li><i class="bx bx-check"></i>Sınırsız Erişim</li>
+                <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Admin Paneli</li>
+                <li><i class="bx bx-check"></i>Menü Ekleme/düzenleme Silme</li>
+                <li><i class="bx bx-check"></i>Menü Fiyat Güncelleme</li>
+                <li><i class="bx bx-check"></i>Yeni Kategori ekleme</li>
               </ul>
-              <!-- <a href="#" class="buy-btn">Get Started</a> -->
+
             </div>
           </div>
 
@@ -574,13 +577,17 @@
               <h3>Dijital Menü, Admin Paneli ve Masaüstü QR Tasarımı</h3>
               <h4>2000<sup>TL</sup><span>Yıllık</span></h4>
               <ul>
-                <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-                <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-                <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-                <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-                <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+                <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
+                <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
+                <li><i class="bx bx-check"></i>Tüm akıllı telefonlarda çalışır</li>
+                <li><i class="bx bx-check"></i>Sınırsız Erişim</li>
+                <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Admin Paneli</li>
+                <li><i class="bx bx-check"></i>Menü Ekleme/düzenleme Silme</li>
+                <li><i class="bx bx-check"></i>Menü Fiyat Güncelleme</li>
+                <li><i class="bx bx-check"></i>Yeni Kategori ekleme</li>
+                <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Masaüstü QR Kod Tasarımı</li>
               </ul>
-              <!-- <a href="#" class="buy-btn">Get Started</a> -->
+
             </div>
           </div>
 
@@ -590,7 +597,7 @@
     </section><!-- End Pricing Section -->
 
     <!-- ======= Frequently Asked Questions Section ======= -->
-    <section id="faq" class="faq section-bg">
+    <!-- <section id="faq" class="faq section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -649,15 +656,16 @@
         </div>
 
       </div>
-    </section><!-- End Frequently Asked Questions Section -->
+    </section> -->
+    <!-- End Frequently Asked Questions Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>ILETISIM</h2>
+          <p>Bize aşağıdaki iletişim bilgilerinden ulaşabilirsiniz.</p>
         </div>
 
         <div class="row">
@@ -667,27 +675,28 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>ANKARA</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>usoft.projects@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <p>+90 546 5402741</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
+              <iframe frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=ANKARA&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
             </div>
 
           </div>
 
-          <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+          <!-- <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="form-group col-md-6">
@@ -714,7 +723,7 @@
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
-          </div>
+          </div> -->
 
         </div>
 
@@ -726,7 +735,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-newsletter">
+    <!-- <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6">
@@ -738,54 +747,19 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer-top">
       <div class="container">
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Arsha</h3>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-          </div>
+            <h3>USOFT</h3>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+            <h4>Sosyal Medya Hesaplarımız</h4>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://instagram.com/qrmenu.usoft" class="instagram"><i class="bx bxl-instagram"></i></a>
             </div>
           </div>
 
@@ -795,14 +769,7 @@
 
     <div class="container footer-bottom clearfix">
       <div class="copyright">
-        &copy; Copyright <strong><span>Arsha</span></strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/arsha-free-bootstrap-html-template-corporate/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        &copy; Copyright 2022 - <strong><span>USOFT</span></strong>. All Rights Reserved
       </div>
     </div>
   </footer><!-- End Footer -->
