--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="box">
               <h3>Dijital Menü</h3>
-              <h4>500<sup>TL</sup><span>Yıllık</span></h4>
+              <!-- <h4>500<sup>TL</sup><span>Yıllık</span></h4> -->
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
                 <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
@@ -557,7 +557,8 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="200">
             <div class="box featured">
               <h3>Dijital Menü, Admin Paneli</h3>
-              <h4>1500<sup>TL</sup><span>Yıllık</span></h4>
+              <!-- <h4>1500<sup>TL</sup><span>Yıllık</span></h4> -->
+
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
                 <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
@@ -575,7 +576,7 @@
           <div class="col-lg-4 mt-4 mt-lg-0" data-aos="fade-up" data-aos-delay="300">
             <div class="box">
               <h3>Dijital Menü, Admin Paneli ve Masaüstü QR Tasarımı</h3>
-              <h4>2000<sup>TL</sup><span>Yıllık</span></h4>
+              <!-- <h4>2000<sup>TL</sup><span>Yıllık</span></h4> -->
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
                 <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
