--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>FIYATLANDIRMA</h2>
+          <h2>PAKETLER</h2>
           <p>Sınırsız Qr kod ile sınırsız masa sayısı siparişleri alımı ile markanızı büyütün. Uygun fiyatlandırma, Komisyon yok. Durmadan! Büyüdükçe yükseltin. <br>
             Dijitalleşmek için ihtiyacınız olan her şey...</p>
         </div>
