--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
-          <img src="assets/img/ee.png" class="img-fluid animated" alt="">
+          <img src="assets/img/img_last.png" class="img-fluid animated" alt="">
         </div>
       </div>
     </div>
