content is edited

--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Temassız/Dijital menüler, müşterilerin akıllı telefonlarının kamerasıyla karekodları tarayarak yiyecek ve içecek seçeneklerine göz atabilecekleri çevrimiçi dijital menülerdir.
-              Restoranlarda bu temassız menüler normalde kağıt üstünde değiştirilmesi veya güncellenmesi zor yada maliyetlidir.
+              Artık yiyecek ve içecek seçeneklerinizi keşfetmek için sadece akıllı telefonunuzu kullanmanız yeterli! Temassız dijital menülerimiz, karekodları tarayarak anında çevrimiçi bir menüye erişim sağlar. Kağıt menülerle uğraşmak yerine, işte sizin için hazırladığımız bu avantajlar:
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Temassız Menüler Daha Güvenli</li>
@@ -159,7 +158,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Bu dijital menüler, fiziksel menülerdeki dejavantajları gidererek daha hızlı, yönetilebilir, müşteri odaklı olacak şekilde yerini alıyor. Bu, müşteri için daha güvenli bir deneyim anlamına geliyor.
+              USOFT dijital menüleri, fiziksel menülerin dezavantajlarını ortadan kaldırarak daha hızlı, yönetilebilir ve müşteri odaklı bir deneyim sunuyor. Artık müşteriler, zahmetsizce ve anında geniş bir yiyecek ve içecek yelpazesine erişebiliyor. Bu sayede, restoran ziyaretlerinizde daha güvenli bir deneyim yaşamanız sağlanıyor.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Daha Hızlı</li>
@@ -547,8 +546,8 @@
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
                 <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
-                <li><i class="bx bx-check"></i> Tüm akıllı telefonlarda çalışır</li>
-                <li><i class="bx bx-check"></i> Sınırsız erişim</li>
+                <li><i class="bx bx-check"></i>Tüm Platformlara Uygun</li>
+                <li><i class="bx bx-check"></i> Sınırsız Erişim</li>
               </ul>
 
             </div>
@@ -562,12 +561,12 @@
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
                 <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
-                <li><i class="bx bx-check"></i>Tüm akıllı telefonlarda çalışır</li>
+                <li><i class="bx bx-check"></i>TTüm Platformlara Uygun</li>
                 <li><i class="bx bx-check"></i>Sınırsız Erişim</li>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Admin Paneli</li>
                 <li><i class="bx bx-check"></i>Menü Ekleme/düzenleme Silme</li>
                 <li><i class="bx bx-check"></i>Menü Fiyat Güncelleme</li>
-                <li><i class="bx bx-check"></i>Yeni Kategori ekleme</li>
+                <li><i class="bx bx-check"></i>Yeni Kategori Ekleme</li>
               </ul>
 
             </div>
@@ -580,12 +579,12 @@
               <ul>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Aktif Menü </li>
                 <li><i class="bx bx-check"></i>Sınırsız Ürün/Menü</li>
-                <li><i class="bx bx-check"></i>Tüm akıllı telefonlarda çalışır</li>
+                <li><i class="bx bx-check"></i>Tüm Platformlara Uygun</li>
                 <li><i class="bx bx-check"></i>Sınırsız Erişim</li>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Admin Paneli</li>
-                <li><i class="bx bx-check"></i>Menü Ekleme/düzenleme Silme</li>
+                <li><i class="bx bx-check"></i>Menü Ekleme/Düzenleme Silme</li>
                 <li><i class="bx bx-check"></i>Menü Fiyat Güncelleme</li>
-                <li><i class="bx bx-check"></i>Yeni Kategori ekleme</li>
+                <li><i class="bx bx-check"></i>Yeni Kategori Ekleme</li>
                 <li><i class="bx bx-check"></i>Size Özel Tasarlanmış Masaüstü QR Kod Tasarımı</li>
               </ul>
 
